--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>后台主页</title>
 </head>
 <body>
-    
+        <!-- 导入 jQuery -->
+    <script src="/assets/lib/jquery.js"></script>
 </body>
 </html>
